--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <p>3ndaki twli fik chi 10 kg zayda hhhh</p>
+   <p>non koun hani</p>
 </body>
 </html>
