--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
   
-    <title>Document</title>
+    <title>SATRAM Cameroun S.A.</title>
 </head>
 <body>
-   <p></p>
+    <img src="satram.png" width="70px" height="70px" alt="satram cameroun"/>
+    <div class="header"> 
+        <nav>
+            <ul>
+                <li><a href="">Acceuil</a> </li>
+                <li><a href="">Service</a> </li>
+                <li><a href="">Offre</a> </li>
+                <li><a href="">Satrammarine</a> </li>
+                <li><a href="">Contact</a> </li>
+                <li><a href="">Localisation</a> </li>
+            </ul>
+            <form> 
+                <input type="search" name="q" placeholder="recherche">
+            </form>
+        </nav>
+        
+
+    </div>
 </body>
 </html>
