--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
     <title>SATRAM Cameroun S.A.</title>
 </head>
-<body>
+<body style="background-color: rgb(37, 132, 71);"  >
     <img src="satram.png" width="70px" height="70px" alt="satram cameroun"/>
     <div class="header"> 
         <nav>
