--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SATRAM Cameroun S.A.</title>
 </head>
 <body style="background-color: rgb(37, 132, 71);"  >
+    <h1 style="color: beige;">SATRAM Cameroun </h1>
     <img src="satram.png" width="70px" height="70px" alt="satram cameroun"/>
     <div class="header"> 
         <nav>
