--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-  
+    <script>
+        
+    </script>
     <title>SATRAM Cameroun S.A.</title>
 </head>
 <body style="background-color: rgb(37, 132, 71);"  >
     <h1 style="color: beige;">SATRAM Cameroun </h1>
-    <img src="satram.png" width="70px" height="70px" alt="satram cameroun"/>
+    <img src="https://www.bing.com/images/search?view=detailV2&ccid=4U6gszTZ&id=DB6AF2E90094C39A03B05916181FC9A5145DD964&thid=OIP.4U6gszTZfHhrY8tkLhLzSAHaHa&mediaurl=https%3a%2f%2fyt3.ggpht.com%2fa%2fAATXAJx7BXb98iS72P3oAPrrEUX25Sm2mGRXNyearRWO%3ds900-c-k-c0xffffffff-no-rj-mo&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.e14ea0b334d97c786b63cb642e12f348%3frik%3dZNldFKXJHxgWWQ%26pid%3dImgRaw%26r%3d0&exph=900&expw=900&q=satram&simid=608010418349635398&FORM=IRPRST&ck=1864998BD1D07A86C2874783C12CFA49&selectedIndex=0" width="70px" height="70px" alt="satram cameroun"/>
     <div class="header"> 
         <nav>
             <ul>
